fix requirement torch

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ uvicorn==0.23.2
 pydantic==2.3.0
 python-multipart==0.0.6
 pillow==10.0.0
-torch==2.0.1
-transformers==4.32.1
+torch>=2.1.0
+transformers==4.35.0
+--extra-index-url https://download.pytorch.org/whl/cpu
 langchain-google-genai==0.0.5
 langchain-core==0.1.4
 python-dotenv==1.0.0
