--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pydantic==2.3.0
 python-multipart==0.0.6
 pillow==10.0.0
 torch>=2.1.0
+huggingface_hub>=0.16.4
 transformers==4.35.0
 --extra-index-url https://download.pytorch.org/whl/cpu
 langchain-google-genai==0.0.5
